# lotus

./: .gitignore  CITATION.bib  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: comparison.rs
docs/: API.md  BENCHMARKS.md  RESULTS.md  THEORY.md  WHITEPAPER.md  index.html
examples/: basic_usage.rs  configuration_tuning.rs  size_report.rs  streaming.rs  vs_varint.rs
scripts/: config_sweep.py  reproduce_paper.sh
src/: lib.rs
tests/: lotus_tests.rs
