[package]
name = "lotus"
version = "0.1.0"
edition = "2024"
authors = ["Lotus Authors <dev@lotus-codec.dev>"]
description = "Lotus: a parametric density-reclaiming integer codec with tiered self-delimiting headers"
license = "Apache-2.0"
repository = "https://github.com/example/lotus"
homepage = "https://example.github.io/lotus"
documentation = "https://example.github.io/lotus/docs"
keywords = ["codec", "compression", "integer", "bitstream", "rust"]
categories = ["compression", "data-structures", "encoding"]
readme = "README.md"

[features]
default = ["small-int-fastpath"]
small-int-fastpath = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
rand = "0.8"

[[bench]]
name = "comparison"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
